--- a/BizPage/index.html
+++ b/BizPage/index.html
@@ -346,33 +346,36 @@
               class="col-lg-4 col-md-6 box wow bounceInUp"
               data-wow-duration="1.4s"
             >
-              <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <div class="icon"><i class="ion-paper-airplane"></i></div>
+              <h4 class="title"><a href="">Telegram bots</a></h4>
               <p class="description">
-                Voluptatum deleniti atque corrupti quos dolores et quas
-                molestias excepturi sint occaecati cupiditate non provident
+                We create various telegram bots using dedicated coding
+                libraries. Host them on servers and give after-production
+                maintenance. Cases: online shops, restorant booking, music
+                search, image search, news feeds, message forwarding etc.
               </p>
             </div>
             <div
               class="col-lg-4 col-md-6 box wow bounceInUp"
               data-wow-duration="1.4s"
             >
-              <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <div class="icon"><i class="ion-ios-cart"></i></div>
+              <h4 class="title"><a href="">Online shops</a></h4>
               <p class="description">
-                Minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat tarad limino ata
+                Sites made for small businesses, with booking, products,
+                payments etc. Made with WordPress.
               </p>
             </div>
             <div
               class="col-lg-4 col-md-6 box wow bounceInUp"
               data-wow-duration="1.4s"
             >
-              <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <div class="icon"><i class="ion-android-desktop"></i></div>
+              <h4 class="title"><a href="">Desktop programs</a></h4>
               <p class="description">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur
+                Various programs made for special requirements. Helps you to
+                work with data the way you need it. Made with C#/.Net
+                technology, DataBases, online APIs.
               </p>
             </div>
             <div
@@ -381,12 +384,12 @@
               data-wow-duration="1.4s"
             >
               <div class="icon">
-                <i class="ion-ios-speedometer-outline"></i>
+                <i class="ion-ios-videocam"></i>
               </div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <h4 class="title"><a href="">Video editing</a></h4>
               <p class="description">
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                qui officia deserunt mollit anim id est laborum
+                Content creation, apps or busi advertisement, news, color
+                enhancement and sound mix, rough cut, clip making etc.
               </p>
             </div>
             <div
@@ -394,11 +397,12 @@
               data-wow-delay="0.1s"
               data-wow-duration="1.4s"
             >
-              <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
+              <div class="icon"><i class="ion-social-instagram"></i></div>
+              <h4 class="title"><a href="">Social Media Marketing </a></h4>
               <p class="description">
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                blanditiis praesentium voluptatum deleniti atque
+                SMM, marketing that targets social platforms like Facebook,
+                Instagram, TikTok. Brand promotion, target audience growth,
+                driving website traffic, and increasing sales, SEO etc.
               </p>
             </div>
             <div
@@ -406,11 +410,25 @@
               data-wow-delay="0.1s"
               data-wow-duration="1.4s"
             >
-              <div class="icon"><i class="ion-ios-people-outline"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+              <div class="icon"><i class="ion-code-working"></i></div>
+              <h4 class="title"><a href="">Custom programming</a></h4>
               <p class="description">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam
-                libero tempore, cum soluta nobis est eligendi
+                Site optimization. Custom pages, like calculators. Complex
+                solutions, like DataBase creating. Work with data. Technologies:
+                C#/.Net, Python, Javascript, PHP, SQL.
+              </p>
+            </div>
+            <div
+              class="col-lg-4 col-md-6 box wow bounceInUp"
+              data-wow-delay="0.1s"
+              data-wow-duration="1.4s"
+            >
+              <div class="icon"><i class="ion-android-bookmark"></i></div>
+              <h4 class="title"><a href="">Data labeling</a></h4>
+              <p class="description">
+                Professional and expierenced images labeling, text labeling,
+                instructions developing, supervising. Creation of dedicated
+                software. Mostly for AI\ML purposes.
               </p>
             </div>
           </div>
