--- a/BizPage/index.html
+++ b/BizPage/index.html
@@ -57,9 +57,9 @@
             <li class="menu-active"><a href="#intro">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#team">Team</a></li>
-            <li class="menu-has-children">
+            <li style="display: none"><a href="#portfolio">Portfolio</a></li>
+            <li style="display: none"><a href="#team">Team</a></li>
+            <li class="menu-has-children" style="display: none">
               <a href="">Drop Down</a>
               <ul>
                 <li><a href="#">Drop Down 1</a></li>
@@ -441,14 +441,13 @@
     ============================-->
       <section id="call-to-action" class="wow fadeIn">
         <div class="container text-center">
-          <h3>Call To Action</h3>
+          <h3>Advice or pricing</h3>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            You can always ask us for advice, consultation or pricing. After
+            reaching out you will see what to do next, where go, what to ask and
+            search or even we will start profitable and pleasant cooperation.
           </p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <a class="cta-btn" href="#contact">Contacts</a>
         </div>
       </section>
       <!-- #call-to-action -->
@@ -460,12 +459,7 @@
         <div class="container">
           <header class="section-header">
             <h3>Our Skills</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip
-            </p>
+            <p>Here you can see our expierence by technology/field in years.</p>
           </header>
 
           <div class="skills-content">
@@ -475,9 +469,9 @@
                 role="progressbar"
                 aria-valuenow="100"
                 aria-valuemin="0"
-                aria-valuemax="100"
+                aria-valuemax="10"
               >
-                <span class="skill">HTML <i class="val">100%</i></span>
+                <span class="skill">HTML <i class="val">5</i></span>
               </div>
             </div>
 
@@ -485,11 +479,11 @@
               <div
                 class="progress-bar bg-info"
                 role="progressbar"
-                aria-valuenow="90"
+                aria-valuenow="100"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                <span class="skill">CSS <i class="val">90%</i></span>
+                <span class="skill">CSS <i class="val">5</i></span>
               </div>
             </div>
 
@@ -497,11 +491,11 @@
               <div
                 class="progress-bar bg-warning"
                 role="progressbar"
-                aria-valuenow="75"
+                aria-valuenow="80"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                <span class="skill">JavaScript <i class="val">75%</i></span>
+                <span class="skill">JavaScript <i class="val">4</i></span>
               </div>
             </div>
 
@@ -509,11 +503,47 @@
               <div
                 class="progress-bar bg-danger"
                 role="progressbar"
-                aria-valuenow="55"
+                aria-valuenow="60"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                <span class="skill">Photoshop <i class="val">55%</i></span>
+                <span class="skill">.Net <i class="val">3</i></span>
+              </div>
+            </div>
+
+            <div class="progress">
+              <div
+                class="progress-bar bg-success"
+                role="progressbar"
+                aria-valuenow="40"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+                <span class="skill">Python <i class="val">2</i></span>
+              </div>
+            </div>
+
+            <div class="progress">
+              <div
+                class="progress-bar bg-info"
+                role="progressbar"
+                aria-valuenow="20"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+                <span class="skill">SMM <i class="val">1</i></span>
+              </div>
+            </div>
+
+            <div class="progress">
+              <div
+                class="progress-bar bg-warning"
+                role="progressbar"
+                aria-valuenow="20"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+                <span class="skill">WordPress <i class="val">1</i></span>
               </div>
             </div>
           </div>
@@ -527,35 +557,32 @@
         <div class="container">
           <header class="section-header">
             <h3>Facts</h3>
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-              accusantium doloremque
-            </p>
+            <p>Some info in numbers.</p>
           </header>
 
           <div class="row counters">
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">274</span>
+              <span data-toggle="counter-up">32</span>
               <p>Clients</p>
             </div>
 
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">421</span>
+              <span data-toggle="counter-up">51</span>
               <p>Projects</p>
             </div>
 
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">1,364</span>
+              <span data-toggle="counter-up">874</span>
               <p>Hours Of Support</p>
             </div>
 
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">18</span>
+              <span data-toggle="counter-up">6</span>
               <p>Hard Workers</p>
             </div>
           </div>
 
-          <div class="facts-img">
+          <div class="facts-img" style="display: none">
             <img src="img/facts-img.png" alt="" class="img-fluid" />
           </div>
         </div>
@@ -565,7 +592,7 @@
       <!--==========================
       Portfolio Section
     ============================-->
-      <section id="portfolio" class="section-bg">
+      <section id="portfolio" class="section-bg" style="display: none">
         <div class="container">
           <header class="section-header">
             <h3 class="section-title">Our Portfolio</h3>
@@ -830,7 +857,7 @@
       <!--==========================
       Clients Section
     ============================-->
-      <section id="clients" class="wow fadeInUp">
+      <section id="clients" class="wow fadeInUp" style="display: none">
         <div class="container">
           <header class="section-header">
             <h3>Our Clients</h3>
@@ -853,7 +880,11 @@
       <!--==========================
       Clients Section
     ============================-->
-      <section id="testimonials" class="section-bg wow fadeInUp">
+      <section
+        id="testimonials"
+        class="section-bg wow fadeInUp"
+        style="display: none"
+      >
         <div class="container">
           <header class="section-header">
             <h3>Testimonials</h3>
@@ -974,7 +1005,7 @@
       <!--==========================
       Team Section
     ============================-->
-      <section id="team">
+      <section id="team" style="display: none">
         <div class="container">
           <div class="section-header wow fadeInUp">
             <h3>Team</h3>
@@ -1065,13 +1096,11 @@
       Contact Section
     ============================-->
       <section id="contact" class="section-bg wow fadeInUp">
+        <br />
         <div class="container">
           <div class="section-header">
             <h3>Contact Us</h3>
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-              accusantium doloremque
-            </p>
+            <p>Just choose most convenient way (click on black text):</p>
           </div>
 
           <div class="row contact-info">
@@ -1079,7 +1108,7 @@
               <div class="contact-address">
                 <i class="ion-ios-location-outline"></i>
                 <h3>Address</h3>
-                <address>A108 Adam Street, NY 535022, USA</address>
+                <address>Lviv, Ukraine</address>
               </div>
             </div>
 
@@ -1087,7 +1116,7 @@
               <div class="contact-phone">
                 <i class="ion-ios-telephone-outline"></i>
                 <h3>Phone Number</h3>
-                <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+                <p><a href="tel:+380673756587">+380 67 3756587</a></p>
               </div>
             </div>
 
@@ -1095,12 +1124,51 @@
               <div class="contact-email">
                 <i class="ion-ios-email-outline"></i>
                 <h3>Email</h3>
-                <p><a href="mailto:info@example.com">info@example.com</a></p>
+                <p>
+                  <a href="mailto:oleksiizhyglov@gmail.com"
+                    >oleksiizhyglov@gmail.com</a
+                  >
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="contact-telegram">
+                <i class="ion-paper-airplane"></i>
+                <h3>Telegram</h3>
+                <p>
+                  <a href="https://t.me/true_mithrandir">@true_mithrandir</a>
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="contact-linkedin">
+                <i class="ion-social-linkedin"></i>
+                <h3>LinkedIn</h3>
+                <p>
+                  <a href="https://www.linkedin.com/in/oleksii-zhyglov-en/"
+                    >Oleksii Zhyglov</a
+                  >
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="contact-upwork">
+                <i class="ion-lightbulb"></i>
+                <h3>Upwork</h3>
+                <p>
+                  <a
+                    href="https://www.upwork.com/freelancers/~010560fa76a13da352"
+                    >Oleksii Z.</a
+                  >
+                </p>
               </div>
             </div>
           </div>
 
-          <div class="form">
+          <div class="form" style="display: none">
             <div id="sendmessage">Your message has been sent. Thank you!</div>
             <div id="errormessage"></div>
             <form action="" method="post" role="form" class="contactForm">
@@ -1167,7 +1235,7 @@
     Footer
   ============================-->
     <footer id="footer">
-      <div class="footer-top">
+      <div class="footer-top" style="display: none">
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-info">
