--- a/BizPage/index.html
+++ b/BizPage/index.html
@@ -231,7 +231,7 @@
               <i class="ion-ios-bookmarks-outline"></i>
               <h4 class="title"><a href="">Work splitted to milestones</a></h4>
               <p class="description">
-                You progress will be easy to track. Each little task will be
+                Your progress will be easy to track. Each little task will be
                 presented, discussed, approved and finished separately when it
                 is needed.
               </p>
