--- a/BizPage/index.html
+++ b/BizPage/index.html
@@ -592,7 +592,8 @@
       <!--==========================
       Portfolio Section
     ============================-->
-      <section id="portfolio" class="section-bg" style="display: none">
+      <section id="portfolio" class="section-bg">
+        <!-- style="display: none" -->
         <div class="container">
           <header class="section-header">
             <h3 class="section-title">Our Portfolio</h3>
@@ -602,68 +603,94 @@
             <div class="col-lg-12">
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-app">App</li>
-                <li data-filter=".filter-card">Card</li>
-                <li data-filter=".filter-web">Web</li>
+                <li data-filter=".filter-front">Front-End</li>
+                <li data-filter=".filter-wordpress">WordPress</li>
+                <!-- <li data-filter=".filter-web">Web</li> -->
               </ul>
             </div>
           </div>
 
           <div class="row portfolio-container">
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-front wow fadeInUp"
             >
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/app1.jpg" class="img-fluid" alt="" />
+                  <img
+                    src="img/portfolio/TelegramGraphs.jpg"
+                    class="img-fluid"
+                    alt=""
+                  />
                   <a
-                    href="img/portfolio/app1.jpg"
+                    href="img/portfolio/TelegramGraphs.jpg"
                     data-lightbox="portfolio"
-                    data-title="App 1"
+                    data-title="Telegram Graphs"
                     class="link-preview"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
-                  <a href="#" class="link-details" title="More Details"
+                  <a
+                    href="https://truegandalf.github.io/ViktorAndOleksii/"
+                    target="_blank"
+                    class="link-details"
+                    title="More Details"
                     ><i class="ion ion-android-open"></i
                   ></a>
                 </figure>
 
                 <div class="portfolio-info">
-                  <h4><a href="#">App 1</a></h4>
-                  <p>App</p>
+                  <h4>
+                    <a
+                      href="https://truegandalf.github.io/ViktorAndOleksii/"
+                      target="_blank"
+                      >Telegram Graphs</a
+                    >
+                  </h4>
+                  <p>Front-End</p>
                 </div>
               </div>
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-wordpress wow fadeInUp"
               data-wow-delay="0.1s"
             >
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/web3.jpg" class="img-fluid" alt="" />
+                  <img
+                    src="img/portfolio/lllahsespro.jpg"
+                    class="img-fluid"
+                    alt=""
+                  />
                   <a
-                    href="img/portfolio/web3.jpg"
+                    href="img/portfolio/lllahsespro.jpg"
                     class="link-preview"
                     data-lightbox="portfolio"
-                    data-title="Web 3"
+                    data-title="WordPress"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
-                  <a href="#" class="link-details" title="More Details"
+                  <a
+                    href="https://lllashespro.com/"
+                    target="_blank"
+                    class="link-details"
+                    title="More Details"
                     ><i class="ion ion-android-open"></i
                   ></a>
                 </figure>
 
                 <div class="portfolio-info">
-                  <h4><a href="#">Web 3</a></h4>
-                  <p>Web</p>
+                  <h4>
+                    <a href="https://lllashespro.com/" target="_blank"
+                      >LLLASHESPRO</a
+                    >
+                  </h4>
+                  <p>WordPress</p>
                 </div>
               </div>
             </div>
 
-            <div
+            <!-- <div
               class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp"
               data-wow-delay="0.2s"
             >
@@ -848,7 +875,7 @@
                   <p>Web</p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
