added telegram and video portfolio

--- a/BizPage/index.html
+++ b/BizPage/index.html
@@ -605,7 +605,8 @@
                 <li data-filter="*" class="filter-active">All</li>
                 <li data-filter=".filter-front">Front-End</li>
                 <li data-filter=".filter-wordpress">WordPress</li>
-                <!-- <li data-filter=".filter-web">Web</li> -->
+                <li data-filter=".filter-video">Video</li>
+                <li data-filter=".filter-telegram">Telegram</li>
               </ul>
             </div>
           </div>
@@ -690,60 +691,84 @@
               </div>
             </div>
 
-            <!-- <div
-              class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp"
+            <div
+              class="col-lg-4 col-md-6 portfolio-item filter-video wow fadeInUp"
               data-wow-delay="0.2s"
             >
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/app2.jpg" class="img-fluid" alt="" />
+                  <img
+                    src="img/portfolio/EneidaLikeMarvel.jpg"
+                    class="img-fluid"
+                    alt=""
+                  />
                   <a
-                    href="img/portfolio/app2.jpg"
+                    href="img/portfolio/EneidaLikeMarvel.jpg"
                     class="link-preview"
                     data-lightbox="portfolio"
-                    data-title="App 2"
+                    data-title="Eneida Like Marvel Opener"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
-                  <a href="#" class="link-details" title="More Details"
+                  <a
+                    href="https://vimeo.com/petrodrovnin"
+                    target="_blank"
+                    class="link-details"
+                    title="More Details"
                     ><i class="ion ion-android-open"></i
                   ></a>
                 </figure>
 
                 <div class="portfolio-info">
-                  <h4><a href="#">App 2</a></h4>
-                  <p>App</p>
+                  <h4>
+                    <a href="https://vimeo.com/petrodrovnin" target="_blank"
+                      >Eneida Like Marvel Opener</a
+                    >
+                  </h4>
+                  <p>Video</p>
                 </div>
               </div>
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-telegram wow fadeInUp"
             >
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/card2.jpg" class="img-fluid" alt="" />
+                  <img
+                    src="img/portfolio/OutWorkBot.jpg"
+                    class="img-fluid"
+                    alt=""
+                  />
                   <a
-                    href="img/portfolio/card2.jpg"
+                    href="img/portfolio/OutWorkBot.jpg"
                     class="link-preview"
                     data-lightbox="portfolio"
-                    data-title="Card 2"
+                    data-title="OutWork_Bot"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
-                  <a href="#" class="link-details" title="More Details"
+                  <a
+                    href="https://t.me/outwrk_bot"
+                    target="_blank"
+                    class="link-details"
+                    title="More Details"
                     ><i class="ion ion-android-open"></i
                   ></a>
                 </figure>
 
                 <div class="portfolio-info">
-                  <h4><a href="#">Card 2</a></h4>
-                  <p>Card</p>
+                  <h4>
+                    <a href="https://t.me/outwrk_bot" target="_blank"
+                      >OutWork_Bot</a
+                    >
+                  </h4>
+                  <p>Telegram</p>
                 </div>
               </div>
             </div>
 
-            <div
+            <!-- <div
               class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp"
               data-wow-delay="0.1s"
             >
