added redirection to use gitHub pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="1;URL=/BizPage/index.html" />
+    <meta
+      http-equiv="refresh"
+      content="1;URL=/ListOfServices/BizPage/index.html"
+    />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>List of Services</title>
