added telegram and video portfolio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta
       http-equiv="refresh"
-      content="1;URL=/ListOfServices/BizPage/index.html"
+      content="1;URL=https://truegandalf.github.io/ListOfServices/BizPage/index.html"
     />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
